# drivematch

./: .gitignore  .prettierrc  .ruff.toml  LICENSE  README.md  app.py  cli.py  data.db  migration.py  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: analysis.py  cache.py  car.py  db.py  gui.py  scraping.py  service.py  types.py
apps/api/: pyproject.toml
apps/api/drivematch-api/: app.py
apps/cli/: pyproject.toml
apps/cli/drivematch-cli/: app.py
apps/desktop/: Makefile  pyproject.toml
apps/desktop/drivematch-desktop/: app.py  regression.py
apps/desktop/drivematch-desktop/widgets/: analyze.py  scrape.py
apps/desktop/drivematch_desktop/: app.py  event_bus.py
apps/desktop/drivematch_desktop/utils/: regression.py
apps/desktop/drivematch_desktop/widgets/: analyze.py  scrape.py
apps/web/: package.json
apps/web/src/: types.ts
apps/web/src/components/: ListEntry.vue  LoadingMessage.vue  SettingsForm.vue
drivematch/: analysis.py  app.py  car.py  cli.py  core.py  db.py  gui.py  migration.py  progress.py  scraping.py  service.py  types.py
drivematch/_internal/: analysis.py  db.py  regression_functions.py  scraping.py
perf/: run.py
src/: App.vue  api.ts  drivematchclient.ts  types.ts
src/components/: CarForm.vue  Header.vue  ListEntry.vue  LoadingMessage.vue  SettingsForm.vue
static/: default.css  scripts.js
svc/: analysis.py  cache.py  gui.py  scraping.py
templates/: index.html
tests/component/: scraping_test.py
tests/unit/: analysis_test.py  db_test.py
