[project]
name = "drivematch"
version = "0.3.1"
description = ""
authors = [
    { name = "Benedict Weis", email = "47110382+benedictweis@users.noreply.github.com" },
]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "selenium (>=4.31.0,<5.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "typer (>=0.15.2,<0.16.0)",
    "typing-extensions (>=4.13.2,<5.0.0)",
    "pyside6 (>=6.9.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
