[project]
name = "drivematch"
version = "0.5.6"
description = ""
authors = [
    { name = "Benedict Weis", email = "47110382+benedictweis@users.noreply.github.com" },
]
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = { text = "Apache 2.0" }
dependencies = ["bs4>=0.0.2", "pydantic>=2.11.7", "selenium>=4.35.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drivematch"]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-cov>=6.2.1", "ruff>=0.12.11", "ty>=0.0.1a19"]

[tool.pytest.ini_options]
markers = [
    "unit: marks a test as a unit test",
    "component: marks a test as a component test",
    "integration: marks a test as an integration test",
]
testpaths = ["tests"]
