[project]
name = "drivematch-cli"
version = "0.1.0"
description = ""
authors = [
    { name = "Benedict Weis", email = "47110382+benedictweis@users.noreply.github.com" },
]
license = { text = "Apache 2.0" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "drivematch @ file:///Users/I569855/projects/drivematch",
    "typer (>=0.15.2,<0.16.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
