[project]
name = "drivematch-cli"
version = "0.1.0"
description = ""
authors = [
    { name = "Benedict Weis", email = "47110382+benedictweis@users.noreply.github.com" },
]
requires-python = ">=3.13,<3.14"
license = { text = "Apache 2.0" }
dependencies = [
    "drivematch",
    "typer (>=0.15.2,<0.16.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drivematch-desktop"]

[tool.uv.sources]
drivematch = { path = "../../" }

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
]
