[project]
name = "drivematch-desktop"
version = "0.1.0"
description = ""
authors = [
    { name = "Benedict Weis", email = "47110382+benedictweis@users.noreply.github.com" },
]
license = { text = "Apache 2.0" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyside6 (>=6.9.0,<7.0.0)",
    "drivematch @ file:///Users/I569855/projects/drivematch",
    "numpy (>=2.2.5,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
