[project]
name = "drivematch-desktop"
version = "0.1.0"
description = ""
authors = [
    { name = "Benedict Weis", email = "47110382+benedictweis@users.noreply.github.com" },
]
requires-python = ">=3.13,<3.14"
license = { text = "Apache 2.0" }
dependencies = [
    "pyside6 (>=6.9.0,<7.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "platformdirs (>=4.3.8,<5.0.0)",
    "drivematch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drivematch-desktop"]

[tool.uv.sources]
drivematch = { path = "../../" }

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
    "ruff>=0.12.11",
]
